[package]
authors = ["Paul Min"]
description = "Waiting for propagation of acme validation record"
edition = "2024"
license = "MIT"
name = "acme-validation-propagation"
repository = "https://github.com/paulusminus/acme-validation-propagation"
version = "0.1.8"

[features]
tokio = ["dep:tokio"]
default = ["tokio"]

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
hickory-resolver = { version = "0.25.1", features = ["tokio"] }
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = [], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.1", features = ["macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
